chore(pages): some alignment work with the fixed position navbar and the floating body

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  margin-top: 15px;
+  margin-top: 95px;
     font-weight: 400;
     padding-top: 70px;
     padding-bottom: 30px;
@@ -208,7 +208,7 @@ p {
 @media (min-width: 768px) {
     .sidebar {
         position: fixed;
-        top: 51px;
+        top: 145px;
         bottom: 0;
         left: 0;
         z-index: 1000;
